# desktop

./: Cargo.toml
docs/: main.aux  main.fdb_latexmk  main.fls  main.tex
src/: main.rs
