[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "*"
eframe = "*"
egui_extras = "*"
re_ui = "*"
re_log = "*"
egui_tiles = "*"
rand = "*"
serialport = "4.6.1"
egui_material_icons = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui_plot = "*"